@@ -1,5 +1,5 @@
 /*
- * $Id: vpopmail.h,v 1.27 2007-05-22 03:59:01 rwidmer Exp $
+ * $Id: vpopmail.h,v 1.28 2007-08-17 22:54:54 rwidmer Exp $
  * Copyright (C) 1999-2004 Inter7 Internet Technologies, Inc.
  *
  * This program is free software; you can redistribute it and/or modify
@@ -216,6 +216,7 @@ char *date_header();
 char *get_remote_ip();
 char *maildir_to_email(const char *maildir);
 int qnprintf (char *buffer, size_t size, const char *format, ...);
+int readuserquota(const char* dir, long *sizep, int *cntp);
 #ifndef HAVE_WARN
 #define warn(...) fprintf(stderr, __VA_ARGS__)
 #endif
